--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "vitest": "^1.4.0"
   },
   "dependencies": {
-    "@yaakapp/api": "^0.2.16",
-    "jsonpath-plus": "^10.1.0"
+    "@yaakapp/api": "^0.2.16"
   }
 }
