--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "yaak-plugin-shell-command",
+  "name": "@jpts/yaak-plugin-shell-command",
   "displayName": "Shell Command",
   "description": "A plugin for executing commands",
   "homepage": "https://github.com/jpts/yaak-plugin-shell-command",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jpts/yaak-plugin-shell-command.git"
+  },
   "license": "MIT",
   "private": true,
   "version": "0.0.1",
